- Fixed issue #12626: Type "ta" in ezconsoleoutput documentation.
- Fixed issue #12625: console tools lacks documentation on targets.
- Fixed issue #12624: Wrong text in documentation of eZConsoleDialogViewer.
- Fixed issue #12623: console menu dialog handles unexisting options wrong.
- Fxied issue #12636: ezcConsoleOutput->outputLine() prints EOL always to
  STDOUT instead of the defined target.

1.3.2 - Monday 14 January 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #11435: ConsoleInput does not reset $option->value;. The newly
  added reset() method can in addtion be used to manually reset all option and
  argument values.
- Fixed issue #12364: /ezc/trunk/ConsoleTools/docs/example_table.php base
  value exception.


1.3.1 - Wednesday 28 November 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #11378: Example code throws Exception.


1.3 - Monday 02 July 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Documentation updates.


1.3beta2 - Thursday 31 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10766: ezcConsoleQuestionDialogTypeValidator with TYPE_FLOAT
  does not accept numbers like 4E3.
- Fixed issue #10767: Class ezcConsoleQuestionDialogRegexValidator described
  in the design document is missing.
- Fixed issue #10782: ConsoleTools: Argument mandatoryness applies always. If
  help option is set, arguments are not checked anymore and old argument
  checking is used, if arguments are disallowed (to assure this is checked
  correctly).
- Fixed issue #10864: ezcConsoleTable calculates wrong column length for
  content including line breaks.
- Fixed issue #10873: ezcConsoleArgument default value not working.
- Fixed issue #10874: ezcConsoleArgument default value not contained in
  generated help text.


1.3beta1 - Monday 07 May 2007